registration for officer done i lowkey think all features are done please help test for bugs